--- a/.github/workflows/deployment_pipeline.yaml
+++ b/.github/workflows/deployment_pipeline.yaml
@@ -1,1 +1,20 @@
-y
+name: CI/CD
+on:
+  push:
+    branches:
+      - main
+
+jobs:
+  build_and_deploy:
+    runs-on: windows-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v5
+        
+      - name: Set up Python
+        uses: actions/setup-python@v6
+        with:
+          python-version: '3.13' 
+
+      - name: Run Script
+        run: python health_violations.py
